Added local CSS

--- a/WooCommerce/Resources/HTML/licenses.html
+++ b/WooCommerce/Resources/HTML/licenses.html
@@ -1,12 +1,13 @@
 <html>
     <head>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-            <style>
-                body {
-                    margin: 28px;
-                }
-            </style>
-            </head>
+        <meta name="viewport" content="initial-scale=1.0" />
+        <link rel="stylesheet" type="text/css" href="pure-min.css" />
+        <style>
+            body {
+                margin: 28px;
+            }
+        </style>
+    </head>
     <body>
         <h2>WooCommerce for iOS</h2>
 
