--- a/WooCommerce/Resources/HTML/licenses.html
+++ b/WooCommerce/Resources/HTML/licenses.html
@@ -5,6 +5,11 @@
         <style>
             body {
                 margin: 28px;
+                color: #595959;
+                background-color: #f7f7f7;
+            }
+            a {
+                color: #96588a;
             }
         </style>
     </head>
@@ -16,23 +21,27 @@
 
         <p>WooCommerce for iOS is released under the terms of the GNU <a href="https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html">GPL v2</a>.</p>
 
+        <hr/>
+
         <h3>Additional Libraries</h3>
 
         <p>WooCommerce for iOS is made possible with the help of many fantastic open source libraries!</p>
 
-        <p>The following libraries are licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache v2</a>:</p>
-
+        <h4>The following libraries are licensed under <a href="https://opensource.org/licenses/MIT">MIT</a>:</h4>
         <ul>
-            <li><a href="https://github.com/greenrobot/EventBus">EventBus</a>: Copyright 2012-2016 Markus Junginger, greenrobot</li>
-            <li><a href="https://github.com/google/dagger">Dagger</a>: Copyright 2012 The Dagger Authors</li>
-            <li><a href="https://github.com/PhilJay/MPAndroidChart">MPAndroidChart</a>: Copyright 2018 Philipp Jahoda</li>
-            <li><a href="https://github.com/bumptech/glide">Glide</a>: Copyright 2014 Google, Inc.</li>
-            <li><a href="https://github.com/googlei18n/libaddressinput">libaddressinput</a>: Copyright 2014 Google, Inc.</li>
+            <li><a href="https://github.com/Alamofire/Alamofire">Alamofire</a> by <a href="http://alamofire.org/">Alamofire Software Foundation</a></li>
+            <li><a href="https://github.com/kishikawakatsumi/KeychainAccess">KeychainAccess</a> by <a href="https://github.com/kishikawakatsumi">Kishikawa Katsumi</a></li>
+            <li><a href="https://github.com/xmartlabs/XLPagerTabStrip">XLPagerTabStrip</a> by <a href="https://xmartlabs.com/">XMARTLABS</a></li>
         </ul>
 
-        <p>And here's our lone BSD licensed dependency:</p>
+        <h4>The following libraries are licensed under <a href="https://www.apache.org/licenses/LICENSE-2.0">The Apache License, Version 2.0</a>:</h4>
         <ul>
-            <li><a href="https://github.com/facebook/shimmer-android">Shimmer</a>: Copyright 2015, Facebook, Inc.</li>
+           <li><a href="https://github.com/danielgindi/Charts">Charts</a> by <a href="https://github.com/danielgindi">Daniel Cohen Gindi</a> &amp; <a href="https://github.com/PhilJay">Philipp Jahoda</a></li>
+        </ul>
+
+        <h4>The following libraries are licensed under <a href="https://opensource.org/licenses/BSD-3-Clause">BSD-3-Clause</a>:</h4>
+        <ul>
+            <li><a href="https://github.com/CocoaLumberjack/CocoaLumberjack">CocoaLumberjack</a> by <a href="https://github.com/robbiehanson">Robbie Hanson</a></li>
         </ul>
 
     </body>
