Added cha-ching sound credit

--- a/WooCommerce/Resources/HTML/licenses.html
+++ b/WooCommerce/Resources/HTML/licenses.html
@@ -44,5 +44,9 @@
             <li><a href="https://github.com/CocoaLumberjack/CocoaLumberjack">CocoaLumberjack</a> by <a href="https://github.com/robbiehanson">Robbie Hanson</a></li>
         </ul>
 
+        <h4>Additional credits:</h4>
+        <ul>
+            <li><a href="https://freesound.org/people/Zott820/sounds/209578/">Cash register sound</a> ("cha-ching") by CapsLok remixed for extra depth by Zott820</li>
+        </ul>
     </body>
 </html>
